--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
         border-color: gray;
         border-style: inset;
         background-color: white;
+        width: 250.718px;
         
     }
 
